feat(auth): replace alice seed with first-run setup + argon2id
V6 drops the publicly-known alice/correct-horse seed (and any polls she
owned via cascading FKs) and renames admin_user.bcrypt_hash to
password_hash. The presenter login no longer ships with credentials
anyone can read off the README.

First-run bootstrap: GET /api/admin/setup/status reports whether
admin_user is empty, POST /api/admin/setup creates the first presenter
exactly once. AdminUserService.createInitialAdmin runs in a
SERIALIZABLE transaction with a recheck-then-insert guard so two
concurrent setup calls cannot both create a "first" admin.

Authenticated user management: POST /api/admin/users adds presenters,
GET /api/admin/users lists them. Both gated by ROLE_AUTHENTICATED.

Password hashing moves to Argon2PasswordEncoder(saltLength=16,
hashLength=32, parallelism=4, memory=65536 KiB, iterations=3) — OWASP
"stronger" parameters. The encoded string is self-describing
($argon2id$v=19$m=...,t=...,p=...$salt$hash) so future parameter
tuning will not break verification of older rows.

ITs that previously relied on the V3 alice seed now seed alice
themselves via AdminUserTestFixtures.seedAdmin / ensureAdmin in a
@BeforeEach.